// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      type="text"
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`TextField render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;
